# auto_apply_bot

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  Readme.md  coverage.xml  pyproject.toml  pytest.ini  setup.sh
src/auto_apply_bot/: __init__.py  controller.py  formatter.py  loader.py  logger.py  runner.py  version.txt
src/auto_apply_bot/formatters/: __init__.py  relevance_formatters.py  summarize_formatters.py
src/auto_apply_bot/model_interfaces/: __init__.py  base_model_interface.py  fine_tuning_base_model_interface.py  foo.py  lora_model_interface.py
src/auto_apply_bot/model_interfaces/cover_letter_generator/: cover_letter_generator.py  generate_custom_model.py  query_custom_model.py
src/auto_apply_bot/model_interfaces/coverletter_generator/: generate_custom_model.py  query_custom_model.py
src/auto_apply_bot/model_interfaces/skill_parser/: __init__.py
src/auto_apply_bot/retrieval_interface/: retrieval.py
src/auto_apply_bot/retrieval_interface/skill_parser/: __init__.py
src/auto_apply_bot/service/api/: urls.py  views.py
src/auto_apply_bot/service/controller_service/: controller_service.py  queue_manager.py
src/auto_apply_bot/service/core/: settings.py  urls.py
src/auto_apply_bot/utils/: context_wrapping.py  file_validation.py  loader.py  logger.py
tests/: conftest.py  test_base_model_interface.py  test_local_rag_indexer.py  test_lora_model_interface.py  test_skill_parser.py
tests/mocks/: mock_loader.py
tests/model_interface_tests/: conftest.py  test_cover_letter_generator.py  test_skill_parser.py
tests/retrieval_interface_tests/: conftest.py  test_local_rag_indexer.py
tests/retrieval_interface_tests/data/: dummy.txt
tests/util_tests/: test_context_wrapping.py  test_file_validation.py  test_loader.py  test_logger.py  test_path_sourcing.py
tests/util_tests/mocks/: mock_context_wrapping_dummy_model.py  mock_file_validation.py
tools/: check_coverage.py  prevent_commit_to_main.py  run_and_coverage.py  run_tests_if_needed.py
