[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
]


[project]

name = "auto-apply-bot"
description = "Playing with agents to automate my application process"

authors = [
    { name = "Gabe Denton", email = "gabe2002denton@gmail.com" },
]

requires-python = ">= 3.10, < 3.11"

dynamic = [
    "version", # handled by setuptools_scm, see at the end
]

dependencies = [
    "numpy >= 1.20, < 2",
    "pydantic >= 1, < 3",
    "python-dotenv >= 1, < 2",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "sentence-transformers",
    "faiss-cpu",
    "langchain",
    "langchain_community",
    "pypdf",
    "python-docx",
]

[project.optional-dependencies]

test = [
    "pytest >= 8, < 9",
    "pytest-cov",
    "pytest-randomly",
    "requests_mock",
    "coverage",
    "psinc-test-tools >= 0.4",
    "webdriver-manager",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = [
    # NB: this is required so that we don't include notebooks+tests+scripts+.. top level folders
    "auto_apply_bot*",
]

[tool.setuptools.package-data]
"auto_apply_bot" = ["version.txt", "**/*.toml"]

[tool.setuptools_scm]
write_to = "src/auto_apply_bot/version.txt"
git_describe_command = "git describe --tags --dirty --match 'v*' --abbrev=8"