[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
]


[project]

name = "auto-apply-bot"
description = "Playing with agents to automate my application process"

authors = [
    { name = "Gabe Denton", email = "gabe2002denton@gmail.com" },
]

requires-python = ">= 3.10, < 3.11"

dynamic = [
    "version", # handled by setuptools_scm, see at the end
]

dependencies = [
    "numpy >= 1.20, < 2",
    "pydantic >= 1, < 3",
    "python-dotenv >= 1, < 2",
    "django >= 5, < 6",
    "transformers >= 4.40, < 5",
    "accelerate >= 1.5, < 2",
    "bitsandbytes >= 0.45, < 1",
    "sentence-transformers >= 3.4, < 4",
    "faiss-cpu >= 1.10, < 2",
    "langchain >= 0.3, < 1",
    "langchain_community >= 0.3, < 1",
    "pypdf >= 5, < 6",
    "python-docx >= 1, < 2",
    "docx2txt >= 0.8, < 1",
    "peft >= 0.15.0, < 1",
]

[project.optional-dependencies]

unix = [
    "python-magic >= 0.4.27, < 1",
]

windows = [
    "python-magic-bin > 0.3, < 1",
]

test = [
    "pytest >= 8, < 9",
    "pytest-cov",
    "pytest-randomly",
    "requests_mock",
    "coverage",
    "webdriver-manager",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src", "."]
namespaces = true
include = [
    "auto_apply_bot*",
    "tests*",
]

[tool.setuptools.package-data]
"auto_apply_bot" = ["version.txt", "**/*.toml"]

[tool.setuptools_scm]
write_to = "src/auto_apply_bot/version.txt"
git_describe_command = "git describe --tags --dirty --match 'v*' --abbrev=8"